OOP 244/ws2/DIY/Workshop 2/errors.txt
Population.cpp:205:1: error: expected ‘}’ at end of input
 } // namespace sdds
 ^
